k8s/network-policies/network-policy-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: default
spec:
  policyTypes:
    - Ingress
  podSelector: {}
